--- a/.github/workflows/replace-ip.yml
+++ b/.github/workflows/replace-ip.yml
@@ -38,9 +38,11 @@ jobs:
 
       # Сохранить изменения и закоммитить в репозиторий
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add .
           git commit -m "Replace IP addresses after merge to main"
-          git push
+          git push "https://${GITHUB_TOKEN}@github.com/${{ github.repository }}.git" HEAD:main
